gloc-macro/tests/ui/fail/applied_to_tuple_struct.stderr
error: #[reactor] does not support tuple structs. Use named fields: `struct Foo { ... }`.
 --> tests/ui/fail/applied_to_tuple_struct.rs:8:20
  |
8 | struct TupleReactor(i32);
  |                    ^^^^^
